{
    "name": "InputActionsCreator",
    "maps": [
        {
            "name": "CharacterControl",
            "id": "1cb9407b-594c-4a13-972d-c06ea40ba7c6",
            "actions": [
                {
                    "name": "MoveDirection",
                    "type": "Value",
                    "id": "3725a810-e59f-48c3-a234-ee78e67e42fc",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDirection",
                    "type": "Value",
                    "id": "f3035280-1fa3-4168-9a85-168955aa6235",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "0152b07e-59e5-46e2-bdc7-48c6990bba0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8e4d62af-cd88-4fc4-be2b-e1df8d93ac6f",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MouseDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "3D Vector",
                    "id": "b18d5cfc-faa8-4464-9737-d110c9f4c6e2",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDirection",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f68c68e9-913b-4324-b6e7-3dff7ad4a574",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "378ffccd-85e3-4da1-8cfe-03c886e0f89e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9e556890-8d27-4434-a62f-8f109f20dddf",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "17f7916d-bd2e-4870-acf4-8f17b9169837",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "fa46ccf2-3248-4db9-9aa2-cf355e39a566",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "d7c0aae3-1037-47cb-9189-53c46cb5b7c9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "04f42689-95d1-4c40-8007-25e0882dbf19",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}